--- a/package.json
+++ b/package.json
@@ -92,12 +92,12 @@
         "@typescript-eslint/parser": "^5.59.1",
         "@vscode/test-electron": "^2.3.0",
         "@vscode/vsce": "^2.20.1",
-        "eslint": "^8.43.0",
+        "eslint": "8.43.0",
         "glob": "^8.1.0",
         "mocha": "^10.2.0",
         "prettier": "2.8.8",
         "ts-loader": "^9.4.2",
-        "typescript": "^5.0.4",
+        "typescript": "5.1.6",
         "webpack": "^5.81.0",
         "webpack-cli": "^5.0.2"
     },
